--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -1,7 +1,7 @@
 /*!
- * Start Bootstrap - Business Casual v5.0.11 (https://startbootstrap.com/theme/business-casual)
- * Copyright 2013-2020 Start Bootstrap
- * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-business-casual/blob/master/LICENSE)
+ * Start Bootstrap - MalibuVBC v5.0.11 (https://brandonjturner.github.io/malibuvbc/)
+ * Copyright 2013-2020 MalibuVBC
+ * Licensed under x (https://github.com/StartBootstrap/malibuvbc/blob/master/LICENSE)
  */
 
 body {
